media rule orientation:portrait added

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ input {
 }
 
 
-@media (max-width: 1000px) {
+@media (max-width: 1000px) and (orientation: portrait) {
   #mainDiv {
     display:block;
   }
